# redirekt

./: .env.example  .envrc  .gitignore  .pylintrc  Caddyfile  Dockerfile  LICENSE  README.md  docker-compose.yaml  docker-entrypoint.sh  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  vite.config.ts  webpack-stats.json  webpack.config.js
admin/: apps.py  forms.py  urls.py  utils.py  views.py
admin/templates/admin/: base.html  create_link.html  index.html  login.html  view_link.html
admin/templates/registration/: password_change_form.html
data/db/base/1/: 1259  2619  2619_vm  2696  2840  2841
data/db/base/16384/: 1247  1249  1259  16385  16386  16390  16391  16393  16394  16397  16399  16401  16402  16405  16407  16415  16419  16421  16425  16427  (+62 more)
data/db/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
data/db/pg_stat/: pgstat.stat
frontend/: index.ts
links/: __init__.py  apps.py  forms.py  jobs.py  models.py  signals.py  urls.py  utils.py  views.py
links/migrations/: 0001_initial.py  0002_link_collect_extended_data.py  0002_visit_referrer.py  0003_auto_20200503_2058.py  0003_auto_20200506_1621.py  0004_auto_20200506_1621.py  0005_auto_20200506_1622.py  0006_remove_visit_add_behavior_and_more.py  0007_alter_visit_fingerprint_fields.py
links/templates/links/: interstitial.html  interstitial_blank.html  link_confirm_delete.html
redirekt/: asgi.py  settings.py  urls.py  wsgi.py
redirekt/settings/: core.py  dev.py  production.py
redirekt/templates/redirekt/: base.html
static/src/: index.ts
(+6 files in other folders)
