[tool.poetry]
name = "redirekt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.3"
dj-database-url = "^2.0.0"
django-rq = "^2.8.1"
ipinfo = "^4.4.2"
django-ipware = "^5.0.0"
django-extensions = "^3.2.3"
ua-parser = "^0.18.0"
inflection = "^0.5.1"
django-vite = "^2.1.3"
rq = "^1.15.1"
psycopg = {extras = ["binary"], version = "^3.1.9"}
gunicorn = "^21.2.0"
whitenoise = "^6.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
